# fast-openai-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
fastopenai/: __init__.py  constant_limits.py  run.py
fastopenai/schema/: rate.py
openaiexpress/: constant_limits.py  run.py
tests/fastopenai/: test_run.py
tests/openaiexpress/: test_run.py
