[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-express"
authors = [
    { name = "vkehfdl1", email = "vkehfdl1@gmail.com" }
]
description = 'Max speed OpenAI call. Do not exceed the tpm & rpm limit.'
readme = "README.md"
requires-python = ">=3.8"
keywords = ['openai', 'parallel']
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Homepage = "https://github.com/vkehfdl1/openai-express" }
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = { file = ["openaiexpress/VERSION"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openaiexpress*"]
exclude = ["tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

